--- a/src/Bottlecap.Net.Bots.Alexa/Bottlecap.Net.Bots.Alexa.csproj
+++ b/src/Bottlecap.Net.Bots.Alexa/Bottlecap.Net.Bots.Alexa.csproj
@@ -2,15 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <RootNamespace>Alexa</RootNamespace>
+    <RootNamespace>Bottlecap.Net.Bots.Alexa</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Alexa.NET" Version="1.5.7" />
+    <PackageReference Include="Amazon.Lambda.Core" Version="1.1.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Bottlecap.Net.Bots.csproj" />
+    <ProjectReference Include="..\Bottlecap.Net.Bots\Bottlecap.Net.Bots.csproj" />
   </ItemGroup>
 
 </Project>
